fixed animation overlapping bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -99,6 +99,7 @@ $time-4: 200s;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .particle,
